<resources>
    <string name="app_name">BartNearMe</string>
    <string name="find_me">Me</string>
    <string name="find_bart">Bart</string>
    <string name="back">Back</string>
    <string name="map_initialize">Map initializing…</string>
    <string name="map_loading">loading map…</string>
    <string name="map_reloading">Reloading map…</string>
    <string name="map_loading_failed">Map Loading Failed</string>
    <string name="weather_loading">loading %s station…</string>
    <string name="service_unavailable">Can\u0027t connect to google services</string>
    <string name="service_ready">Ready to Map</string>
    <string name="service_not_ready">Map not available</string>
    <string name="google_map_key">AIzaSyAqEbC-xmYxjB-QJuBNB9nFC9-HNkI-6y0</string>
    <string name="facebook_app_id">910044272449364</string>
    <string name="input_title">Location:</string>
    <string name="input_hint">Manually input location</string>
    <string name="last_location_failed">Can\u0027t find your location</string>
    <string name="alert_wrong_input">No result matched your input address</string>
    <string name="alert_too_far">The most closest Bart station is %s km from you :/ Too far…</string>
    <string name="alert_button_comfirm">Yup</string>
    <string name="alert_no_avatar">There is no avatar record in system :( and you may get your avatar by log-in your
        facebook again that can update your avatar in system :)
    </string>
    <string name="no_stations_found">No stations found</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="zip">Zip:</string>
    <string name="distance">Distance:</string>
    <string name="weather">Weather:</string>
    <string name="Current_Location">Current Location:</string>
    <string name="temperature">%1$s - %2$s F&#176;</string>
    <string name="name_unavailable">name unavailable</string>
    <string name="address_unavailable">address unavailable</string>
    <string name="city_unavailable">city unavailable</string>
    <string name="state_unavailable">state unavailable</string>
    <string name="zip_unavailable">zip unavailable</string>
    <string name="distance_unavailable">zip unavailable</string>
    <string name="temperature_unavailable">temperature unavailable</string>
    <string name="service_error">Please check your data service.</string>
    <string name="no_city_alert">Please check the city input</string>
    <string name="no_state_alert">Please check the state input</string>
    <string name="general_input_error_alert">Please check your input</string>
    <string name="city_state_not_match_alert">City and state are not matched</string>
    <string name="confirm_alert">Confirm</string>
    <string name="distance_format">%s km</string>
    <string name="none">N/A</string>
</resources>
