<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bart_run">

    <RelativeLayout
        android:id="@+id/up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/inputTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/input_title"
            android:textColor="@color/pureWhite"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/mapInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/inputTitle"
            android:hint="@string/input_hint"
            android:imeOptions="actionGo"
            android:inputType="textPostalAddress"
            android:shadowColor="@color/bartBlue"
            android:singleLine="true"
            android:textColor="@color/pureWhite"
            android:textColorHint="@color/pureWhite"
            android:textStyle="italic">
        </EditText>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/findMe"
            xmlns:app="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/findMe"
            android:layout_marginTop="19dp"
            android:elevation="7dp"
            android:text="@string/find_me"
            android:textColor="@color/pureWhite"
            android:textSize="14sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/up"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/findBart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/mapFragment"
        app:backgroundTint="@color/bartBlue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/up"
        android:layout_marginTop="19dp"
        android:elevation="7dp"
        android:text="@string/find_bart"
        android:textColor="@color/pureWhite"
        android:textSize="14sp"
        android:textStyle="bold"/>

</RelativeLayout>
